java 25 stuff and mixin extras improvements